Adição das referências e atualizações em métodos baseados em árvores/outros métodos

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ book:
     - caret.qmd
     - cross-valid.qmd
     - comp-func.qmd
-    - teste-link.qmd
+    #    - teste-link.qmd
     - pre-processamento.qmd
     - metodos-de-treino-baseados-em-arvore.qmd
     - outros-metodos.qmd
